more work on the main page.
Gallery stylings. Changing the color of the individual body of work
pages.

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
         <hr/>
       </div> -->
 
-      <div id="main-title" 
+      <div id="main-title" class="cf" 
            data-start="position:static;" 
            data-top="position:fixed;">
 
@@ -43,9 +43,13 @@
               data--20p-top="color:rgb(255,255,255);font-size:2rem;"
               data--70p-top="color:rgb(228,149,55);font-size:2rem;">
             DAVID SCHORR
-          </h1> 
+          </h1>
         </a>
 
+        <div id="static-header" class="cf">
+          <h4 id="biography" class="float-left">Biography</h4>
+          <h4 id="contact" class="float-right">Contact</h4>
+        </div>
       </div>
 
       <!-- The following div exists to add a drop shadow beneath
