--- a/site/gallery.html
+++ b/site/gallery.html
@@ -12,13 +12,11 @@
   <header>
 
     <div id="main-title-gallery">
-
       <a href="../index.html">  
         <h1 id="h1-gallery">
-          DAVID SCHORR
+          APOTHECARY
         </h1>
       </a>
-
     </div>
 
     <!-- The following div exists to add a drop shadow beneath
@@ -32,31 +30,61 @@
        in this div allows the site to work on mobile -->
   <div id="skrollr-body">
 
-    <div id="dummy-div-gallery"></div>
-
     <!-- Here begins the list of works -->
     <!-- The animation here is to make up for the lost space
          when the title shrinks-->
-    <div id="gallery-container"
-          data-anchor-target="#main-title-gallery"
-          data-10p-top="margin-top:40px;"
-          data-top="margin-top:20px;">
+    <div id="gallery-container">
+
+      <div id="dummy-div-gallery"></div>
 
       <ul>
         <li>
           <figure>
-            
+            <img src="../img/apothecary/W_Adversity.jpg" alt="The Pulpit Rock">
+            <figcaption><h3>Adversity</h3></figcaption>
           </figure>
         </li>
-        <li>Hello
+        <li>
+          <figure>
+            <img src="../img/apothecary/W_Afterthought.jpg" alt="The Pulpit Rock">
+            <figcaption><h3>Afterthought</h3></figcaption>
+          </figure>
         </li>
-        <li>Hello
+        <li>
+          <figure>
+            <img src="../img/apothecary/W_AiryNothings.jpg" alt="The Pulpit Rock">
+            <figcaption><h3>Airy Nothings</h3></figcaption>
+          </figure>
         </li>
-        <li>Hello
+        <li>
+          <figure>
+            <img src="../img/apothecary/W_AnswerdPrayersLT.jpg" alt="The Pulpit Rock">
+            <figcaption><h3>Answered Prayers</h3></figcaption>
+          </figure>
         </li>
-        <li>Hello
+        <li>
+          <figure>
+            <img src="../img/apothecary/W_Adversity.jpg" alt="The Pulpit Rock">
+            <figcaption><h3>Adversity</h3></figcaption>
+          </figure>
         </li>
-        <li>Hello
+        <li>
+          <figure>
+            <img src="../img/apothecary/W_Afterthought.jpg" alt="The Pulpit Rock">
+            <figcaption><h3>Afterthought</h3></figcaption>
+          </figure>
+        </li>
+        <li>
+          <figure>
+            <img src="../img/apothecary/W_AiryNothings.jpg" alt="The Pulpit Rock">
+            <figcaption><h3>Airy Nothings</h3></figcaption>
+          </figure>
+        </li>
+        <li>
+          <figure>
+            <img src="../img/apothecary/W_AnswerdPrayersLT.jpg" alt="The Pulpit Rock">
+            <figcaption><h3>Answered Prayers</h3></figcaption>
+          </figure>
         </li>
       </ul>
     </div>
