Commented out some code
for demo

--- a/index.html
+++ b/index.html
@@ -45,11 +45,11 @@
             DAVID SCHORR
           </h1>
         </a>
-
+<!-- 
         <div id="static-header" class="cf">
           <h4 id="biography" class="float-left">Biography</h4>
           <h4 id="contact" class="float-right">Contact</h4>
-        </div>
+        </div> -->
       </div>
 
       <!-- The following div exists to add a drop shadow beneath
