--- a/site/gallery.html
+++ b/site/gallery.html
@@ -33,10 +33,10 @@
     <!-- Here begins the list of works -->
     <!-- The animation here is to make up for the lost space
          when the title shrinks-->
-    <div id="gallery-container">
+    <div class="card-container" id="gallery-container">
 
       <div id="dummy-div-gallery"></div>
-
+      
       <ul>
         <li>
           <figure>
