--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
   <div id="bg-cover"
        data-anchor-target="#main-title"
        data-start="opacity:0;"
-       data-center="opacity:.8;">
+       data-200-top="opacity:.8;">
   </div>
 
   <!-- This page scrolls up to cover the background-->
@@ -33,24 +33,32 @@
         <hr/>
       </div> -->
 
-      <div id="main-title" class="cf" 
+      <nav id="main-title" class="cf"
            data-start="position:static;" 
            data-top="position:fixed;">
 
-        <a href="index.html">  
-          <h1 data-10p-top="color:rgb(255,255,255);font-size:2.3rem;"
-              data-top="color:rgb(255,255,255);font-size:2rem;"
-              data--20p-top="color:rgb(255,255,255);font-size:2rem;"
-              data--70p-top="color:rgb(228,149,55);font-size:2rem;">
-            DAVID SCHORR
-          </h1>
-        </a>
-<!-- 
-        <div id="static-header" class="cf">
-          <h4 id="biography" class="float-left">Biography</h4>
-          <h4 id="contact" class="float-right">Contact</h4>
-        </div> -->
-      </div>
+        <div id="left-nav" class="float-left">
+          <h2 data--20p-top="opacity:0;"
+              data--70p-top="opacity:1;">Biography</h2>
+        </div>
+
+        <div id="right-nav" class="float-right">
+          <h2 data--20p-top="opacity:0;"
+              data--70p-top="opacity:1;">Contact</h2>
+        </div>
+
+        <div id="center-nav">
+          <a href="index.html">  
+            <h1 data-10p-top="color:rgb(255,255,255);font-size:2.3rem;"
+                data-top="color:rgb(255,255,255);font-size:2rem;"
+                data--20p-top="color:rgb(255,255,255);font-size:2rem;"
+                data--70p-top="color:rgb(228,149,55);font-size:2rem;">
+              DAVID SCHORR
+            </h1>
+          </a>
+        </div>
+
+      </nav>
 
       <!-- The following div exists to add a drop shadow beneath
            the header -->
@@ -81,57 +89,105 @@
             data-10p-top="margin-top:40px;"
             data-top="margin-top:20px;">
 
-        <!-- This div exists to be a spacer. I chose not to
-             CSS to do this, because background wouldn't play
-             nicely -->
+        <div class="card-container cf" id="menu-container">
 
+          <div id="bodies-of-works"><h2>Bodies of Works</h2></div> 
 
-        <section id="apothecary" href="site/gallery.html">
-          <a href="site/gallery.html">
-            <h2>Apothecary</h2>
-          </a>
-        </section>
+          <div id="apothecary" href="site/gallery.html">
+            <img src="img/main-page-thumbs/apothecary.jpg" />
+            <a href="site/gallery.html">
+              <h2>Apothecary</h2>
+            </a>
+          </div>
 
-        <section id="goods">
-          <h2>GOODS</h2>
-        </section>
+          <div id="goods">
+            <img src="img/main-page-thumbs/goods.jpg" />
+            <h2>GOODS</h2>
+          </div>
 
-        <section id="the-imaginary-life-of-ordinary-things">
-          <h2>The Imaginary Life of Ordinary Things</h2>
-        </section>
+          <div id="the-imaginary-life-of-ordinary-things">
+            <img src="img/main-page-thumbs/imaginary.jpg" />
+            <h2>The Imaginary Life of Ordinary Things</h2>
+          </div>
 
-        <section id="the-imaginary-life-of-ordinary-things">
-          <h2>Khadi</h2>
-        </section>
+          <div id="the-imaginary-life-of-ordinary-things">
+            <img src="img/main-page-thumbs/khadi.jpg" />
+            <h2>Khadi</h2>
+          </div>
 
-        <section id="the-imaginary-life-of-ordinary-things">
-          <h2>Fables of La Fontaine and other Illustrations</h2>
-        </section>
+          <div id="apothecary" href="site/gallery.html">
+            <img src="img/main-page-thumbs/apothecary.jpg" />
+            <a href="site/gallery.html">
+              <h2>Apothecary</h2>
+            </a>
+          </div>
 
-        <section id="the-imaginary-life-of-ordinary-things">
-          <h2>les Fleurs de mal</h2>
-        </section>
+          <div id="goods">
+            <img src="img/main-page-thumbs/goods.jpg" />
+            <h2>GOODS</h2>
+          </div>
 
-        <section id="the-imaginary-life-of-ordinary-things">
-          <h2>Songs with a dying fall</h2>
-        </section>
+          <div id="the-imaginary-life-of-ordinary-things">
+            <img src="img/main-page-thumbs/imaginary.jpg" />
+            <h2>The Imaginary Life of Ordinary Things</h2>
+          </div>
 
-        <section id="the-imaginary-life-of-ordinary-things">
-          <h2>et. al. mostly before 1980</h2>
-        </section>
+          <div id="the-imaginary-life-of-ordinary-things">
+            <img src="img/main-page-thumbs/khadi.jpg" />
+            <h2>Khadi</h2>
+          </div>
 
-        <section id="the-imaginary-life-of-ordinary-things">
-          <h2>Roman Prints and Drawings</h2>
-        </section>
+          <div id="apothecary" href="site/gallery.html">
+            <img src="img/main-page-thumbs/apothecary.jpg" />
+            <a href="site/gallery.html">
+              <h2>Apothecary</h2>
+            </a>
+          </div>
 
-        <section id="the-imaginary-life-of-ordinary-things">
-          <h2>Saints</h2>
-        </section>
+          <div id="goods">
+            <img src="img/main-page-thumbs/goods.jpg" />
+            <h2>GOODS</h2>
+          </div>
 
-        <section id="the-imaginary-life-of-ordinary-things">
-          <h2>Portraits</h2>
-        </section>
+          <div id="the-imaginary-life-of-ordinary-things">
+            <img src="img/main-page-thumbs/imaginary.jpg" />
+            <h2>The Imaginary Life of Ordinary Things</h2>
+          </div>
+
+          <div id="the-imaginary-life-of-ordinary-things">
+            <img src="img/main-page-thumbs/khadi.jpg" />
+            <h2>Khadi</h2>
+          </div>
+<!-- 
+          <div id="the-imaginary-life-of-ordinary-things">
+            <h2>Fables of La Fontaine and other Illustrations</h2>
+          </div>
+
+          <div id="the-imaginary-life-of-ordinary-things">
+            <h2>les Fleurs de mal</h2>
+          </div>
+
+          <div id="the-imaginary-life-of-ordinary-things">
+            <h2>Songs with a dying fall</h2>
+          </div>
+
+          <div id="the-imaginary-life-of-ordinary-things">
+            <h2>et. al. mostly before 1980</h2>
+          </div>
+
+          <div id="the-imaginary-life-of-ordinary-things">
+            <h2>Roman Prints and Drawings</h2>
+          </div>
+
+          <div id="the-imaginary-life-of-ordinary-things">
+            <h2>Saints</h2>
+          </div>
+
+          <div id="the-imaginary-life-of-ordinary-things">
+            <h2>Portraits</h2>
+          </div> -->
         
+        </div>
       </div>
     </div>  
   </div>
