adding some thumbs
adding some thumbs

--- a/index.html
+++ b/index.html
@@ -115,6 +115,16 @@
             <h2>Khadi</h2>
           </div>
 
+          <div id="the-imaginary-life-of-ordinary-things">
+            <img src="img/main-page-thumbs/fables.jpg" />
+            <h2>Fables of La Fontaine and other Illustrations</h2>
+          </div>
+
+          <div id="the-imaginary-life-of-ordinary-things">
+            <img src="img/main-page-thumbs/les.jpg" />
+            <h2>les Fleurs de mal</h2>
+          </div>
+
           <div id="apothecary" href="site/gallery.html">
             <img src="img/main-page-thumbs/apothecary.jpg" />
             <a href="site/gallery.html">
@@ -159,13 +169,6 @@
             <h2>Khadi</h2>
           </div>
 <!-- 
-          <div id="the-imaginary-life-of-ordinary-things">
-            <h2>Fables of La Fontaine and other Illustrations</h2>
-          </div>
-
-          <div id="the-imaginary-life-of-ordinary-things">
-            <h2>les Fleurs de mal</h2>
-          </div>
 
           <div id="the-imaginary-life-of-ordinary-things">
             <h2>Songs with a dying fall</h2>
