--- a/site/gallery.html
+++ b/site/gallery.html
@@ -14,7 +14,7 @@
     <div id="main-title-gallery">
       <a href="../index.html">  
         <h1 id="h1-gallery">
-          APOTHECARY
+          APOTHECARY ?
         </h1>
       </a>
     </div>
@@ -98,6 +98,7 @@
        documentation: https://github.com/Prinzhorn/skrollr -->
   <script type="text/javascript" src="../js/skrollr.min.js"></script>
   <script src="../js/gallery_script.js"></script>
+  <!-- Analytics code -->
   <script>
     (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
     (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
